--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <script src="https://unpkg.com/pinyin-pro"></script>
     <title>Pinyin Converter</title>
   </head>
   <body>
@@ -15,8 +16,8 @@
         <button id="copy-button">Copy</button>
       </div>
       <div class="original">
-        <textarea name="original-text" id="original-text" class="init">
-Xia4ban1 ba5</textarea
+        <textarea name="original-text" id="original-text">
+下班吧&#10xia4 ban1 ba5</textarea
         >
         <button id="clear-button">Clear</button>
       </div>
