--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Pinyin Converter</title>
   </head>
   <body>
-    <div class="title">5 Tones Pinyin Writer</div>
+    <div class="title">Pinyin Converter</div>
     <div class="main">
       <div class="result">
         <div id="result-text"></div>
